--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -3,10 +3,14 @@
 
 {% block body %}
 
-    {% include 'partial/header.html.twig' %}
-<h1>HELLO</h1>
+{#    {% include 'partial/header.html.twig' %}#}
+<h1>POKEMON BDD EXO</h1>
 
-    {% include 'partial/footer.html.twig' %}
+    <div class="homepage__img">
+        <img src="https://cdn.vectorstock.com/i/1000v/73/91/pokemon-logo-icon-template-vector-23237391.jpg" alt="">
+    </div>
+
+{#    {% include 'partial/footer.html.twig' %}#}
 
 
 {% endblock %}
