--- a/templates/partial/header.html.twig
+++ b/templates/partial/header.html.twig
@@ -19,6 +19,6 @@
         {# path() 쓰는 이유 : URL을 하드코딩하지 않고, 라우트 이름을 사용하여 URL을 생성하므로, 라우트 경로가 변경되더라도 템플릿을 수정할 필요가 없습니다. #}
         <li><a href="{{ path('home') }}">home</a></li>
         <li><a href="{{ path('pokemon_category_list') }}">category</a></li>
-        <li><a href="/articles">articles</a></li>
+        <li><a href="/articles">pokemons</a></li>
     </ul>
 </header>
